Version 0.5 alpha 1 -- First public release of PEAK

