@@ -1,3 +1,6 @@
-Version 0.5 alpha 1 -- First public release of PEAK
+Fixes and Enhancements since Version 0.5 alpha 1
 
+ - Made 'NOT_GIVEN' and 'NOT_FOUND' recognizable by humans (they 'repr'
+   and 'str' to their names) and by Python (they can be pickled, and
+   when restored they come back as the same object).
 
